--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "@faker-js/faker": "^8.2.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "mysql": "^2.18.1"
   }
 }
